syntax = "proto3";
package kvraft;

service RaftService {
  // Invoked by candidates to gather votes
  rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply);
  
  // Invoked by leader to replicate log entries and also used as heartbeat
  rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply);
}

message RequestVoteArgs {
  uint64 term = 1;
  uint64 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteReply {
  uint64 term = 1;
  bool vote_granted = 2;
}

message Entry {
  uint64 term = 1;
  string command = 2;
}

message AppendEntriesArgs {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated Entry entries = 5; // for heartbeats
  uint64 leader_commit = 6;
}

message AppendEntriesReply {
  uint64 term = 1;
  bool success = 2;
}