syntax = "proto3";

package raftpb;

message Command {
  string kind = 1;
  string key = 2;
  string value = 3;
}

message Entry {
  Command command = 1;
  int32 term = 2;
}

message GetStateRequest {}

message GetStateReply {
  bool is_leader = 1;
}

message SendCommandRequest {
  Command command = 1;
}

message SendCommandReply {
  string value = 1;
}

message RequestVoteArgs {
  int32 term = 1;
  int32 candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteReply {
  int32 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesArgs {
  int32 term = 1;
  int32 leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  repeated Entry entries = 5;
  int32 leader_commit = 6;
}

message AppendEntriesReply {
  int32 term = 1;
  bool success = 2;
}

service Raft {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
  rpc GetState(GetStateRequest) returns (GetStateReply);
  rpc SendCommand(SendCommandRequest) returns (SendCommandReply);
}